# rocket_pong

./: .gitmodules  CMakeLists.txt  makebuild.sh  makesetup.sh  vsopen.bat  vssetup.bat  xcodeopen.sh  xcodesetup.sh
include/: ball.h  ballcontroller.h  ballgeometry.h  paddle.h  paddlecontroller.h  paddlegeometry.h  ponggame.h  starfield.h
src/: ball.cpp  ballcontroller.cpp  ballgeometry.cpp  main.cpp  paddle.cpp  paddlecontroller.cpp  paddlegeometry.cpp  ponggame.cpp  starfield.cpp
